Fixes cropped select menu on iPhone
line-height style on select menu was cropping the language select menu
on the iPhone.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1329,7 +1329,7 @@ main
 
   select
   {
-    height:42px;
+    height:40px;
     font-size: 16px;
     margin:0;
     color:$black;
@@ -1337,7 +1337,6 @@ main
     padding:10px;
     margin-top:10px;
     letter-spacing:1px;
-    line-height:6px;
     @include border-radius(4px);
 
     background:$green_dark;
