--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -244,6 +244,11 @@
       float:none;
       width:100%;
       @include box-sizing(border-box);
+
+      select
+      {
+        height:auto;
+      }
     }
 
     #search-box
